--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-jwt": "^6.1.0",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
